--- a/priv/static/app.css
+++ b/priv/static/app.css
@@ -16,9 +16,13 @@
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
-    --container-3xl: 48rem;
+    --container-4xl: 56rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
+    --text-xl: 1.25rem;
+    --text-xl--line-height: calc(1.75 / 1.25);
+    --text-3xl: 1.875rem;
+    --text-3xl--line-height: calc(2.25 / 1.875);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -214,6 +218,9 @@
   .hidden {
     display: none;
   }
+  .h-fit {
+    height: fit-content;
+  }
   .max-h-\[calc\(100vh-300px\)\] {
     max-height: calc(100vh - 300px);
   }
@@ -226,8 +233,8 @@
   .w-screen {
     width: 100vw;
   }
-  .max-w-3xl {
-    max-width: var(--container-3xl);
+  .max-w-4xl {
+    max-width: var(--container-4xl);
   }
   .flex-col {
     flex-direction: column;
@@ -313,9 +320,17 @@
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
+  .text-3xl {
+    font-size: var(--text-3xl);
+    line-height: var(--tw-leading, var(--text-3xl--line-height));
+  }
   .text-sm {
     font-size: var(--text-sm);
     line-height: var(--tw-leading, var(--text-sm--line-height));
+  }
+  .text-xl {
+    font-size: var(--text-xl);
+    line-height: var(--tw-leading, var(--text-xl--line-height));
   }
   .text-blue-500 {
     color: var(--color-blue-500);
@@ -325,6 +340,9 @@
   }
   .text-red-400 {
     color: var(--color-red-400);
+  }
+  .italic {
+    font-style: italic;
   }
   .underline {
     text-decoration-line: underline;
